# spear

./: .flake8  .gitignore  cli_menu.py  constants.py  db_utils.py  export_database.bat  export_to_csv.py  listen_history.py  main.py  play_song.py  playback_timeline.py  playlists.py  pyproject.toml  reader.py  readme.md  requirements-dev.txt  requirements.txt  run.bat  run.sh  search.py  song_metadata.py  user_specs.example.yaml  youtube_downloader.py  youtube_integration.py  youtube_utils.py  yt-dlp.conf
data/: sasdalisten_history.db
tests/: test_export_to_csv.py  test_listen_history.py  test_playlists.py  test_song_metadata.py
